scss/partials/_navbar.scss
nav.oc-navbar {
  position: fixed;
  z-index: 1030;
  top: 0;
  left: 0;
  width: 100vw;
  background-color: white;
  border-top: 4px solid $oc_yellow;
  margin: 0px;
  height: #{$navbar_height}px;
  box-shadow: 1px 4px 4px 0 rgba(0, 0, 0, 0.2);

  @media screen and (max-width: 683px){
    position: absolute;
  }

  div.oc-navbar-header {
    position: relative;
    margin: 0 auto;
    padding: 0 30px;
    margin-top: 30px;

    @media screen and (max-width: 683px){
      padding: 0px;
    }

    ul.navbar-right {
      float: right;
      margin-right: 0px;
    }
  }
}

